--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -207,8 +207,8 @@
 				</div>
 				<div id="right">
 					<button title="Show song data" id="showData"><img src="Assets/ic_keyboard_arrow_up_white.svg"></button>
-					<button title="Repeat song" id="repeat"><img src="Assets/ic_repeat_white.svg"></button>
-					<button title="Shuffle" id="shuffle"><img src="Assets/ic_shuffle_white.svg"></button>
+					<button title="Repeat song" id="repeat" activated={{repeatDefaultOnAudio}}><img src="Assets/ic_repeat_white.svg"></button>
+					<button title="Shuffle" id="shuffle" activated={{shuffleDefaultOnAudio}}><img src="Assets/ic_shuffle_white.svg"></button>
 				</div>
 			</div>
 		</div>
