--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -198,7 +198,7 @@
 						<button title="Change volume" id="volumeToggle"><img src="Assets/ic_volume_up_white.svg"></button>
 						<div id="volumePopUp">
 							<button title="Mute" id="muteBtn"><img src="Assets/ic_volume_off_black.svg"></button>
-							<input id="volumeSlider" type="range" min="0" max="100" value="100">
+							<input id="volumeSlider" type="range" min="0" max="100" value="{{defaultVolume}}">
 						</div>
 					</div>
 				</div>
