--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -191,6 +191,7 @@
 					<li><b>Right Arrow:</b> Next song</li>
 					<li><b>Left Arrow:</b> Pervious song</li>
 					<li><b>Double click on song:</b> Add to queue and play</li>
+					<li><b>ALT + click on song:</b> Add to the queue directly after the current song</li>
 					<li><b>CTRL click on playlist:</b> Edit playlist</li>
 					<li><b>CTRL click on queue item:</b> Remove from queue</li>
 				</ul>
