--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -362,8 +362,8 @@
 
 					<ol>
 						<li>Install <a href="https://nodejs.org/en/download/package-manager/">node.js</a></li>
-						<li>Clone or download the <a href="https://github.com/jantje19/MusicStream/clone">Github repo</a></li>
-						<li>Within the directory run: <code>npm install &amp;&amp; npm start</code> in a command line</li>
+						<li>Clone or download the <a href="https://github.com/jantje19/MusicStream/">Github repo</a></li>
+						<li>Within the directory run: <code>npm install &amp;&amp; npm start</code> in a CLI</li>
 						<li>Go to <a href="http://localhost:8000">http://localhost:8000</a></li>
 					</ol>
 				</p>
