--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -141,8 +141,10 @@
 				<div id="overflowMenu">
 					<a href="/videos/"><button>Video's</button></a>
 					<button id="updateJSONBtn">Update JSON</button>
+					<a href="/editTags.html"><button>Edit Song Tags</button></a>
 					<a href="/downloadYoutube"><button>Youtube Download</button></a>
 					<a href="/help/"><button>Help / Shortcuts</button></a>
+					<a href="/settings/"><button>Settings</button></a>
 				</div>
 			</div>
 		</div>
