--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -257,7 +257,8 @@
 
 			<div maxHeight="80">
 				<p>
-					This function is not (yet) supported. You can use it with limited functionality.
+					This function is out of alpha! If you have any improvements: <a href="https://github.com/jantje19/MusicStream/issues/new">GitHub</a>.<br>
+					More documentation soon.
 				</p>
 			</div>
 		</div>
