--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -208,7 +208,7 @@
 					<p id="songName" style="width: 100%; text-overflow: ellipsis; overflow: hidden; padding: 5px 0"></p>
 				</div>
 				<div id="right">
-					<button title="Show song data" id="showData"><img src="Assets/ic_keyboard_arrow_up_white.svg"></button>
+					<button title="Show song data" id="showData"><img title="Show Lyrics" src="Assets/ic_keyboard_arrow_up_white.svg"></button>
 					<button title="Repeat song" id="repeat" activated={{repeatDefaultOnAudio}}><img src="Assets/ic_repeat_white.svg"></button>
 					<button title="Shuffle" id="shuffle" activated={{shuffleDefaultOnAudio}}><img src="Assets/ic_shuffle_white.svg"></button>
 				</div>
