--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -192,8 +192,8 @@
 					<li><b>Left Arrow:</b> Pervious song</li>
 					<li><b>Double click on song:</b> Add to queue and play</li>
 					<li><b>CTRL + click on song:</b> Add to the queue directly after the current song</li>
-					<li><b>CTRL click on playlist:</b> Edit playlist</li>
-					<li><b>CTRL click on queue item:</b> Remove from queue</li>
+					<li><b>CTRL + click on playlist:</b> Edit playlist</li>
+					<li><b>CTRL + click on queue item:</b> Remove from queue</li>
 				</ul>
 
 				<hr>
@@ -201,7 +201,7 @@
 				<h3>Supported extensions</h3>
 
 				<p>
-					By default the supported file extensions are: <i>'mp3'</i>, <i>'m3a'</i> and <i>'wav'</i>. But you can add or remove extensions on the <a href="/settings/">settings page</a>. Take into a count that not every browser supports the same file extensions.
+					By default the supported file extensions are: <i>'mp3'</i>, <i>'m3a'</i> and <i>'wav'</i>. But you can add or remove extensions on the <a href="/settings/">settings page</a>. Take into account that not every browser supports the same file extensions.
 				</p>
 
 				<hr>
@@ -209,7 +209,7 @@
 				<h3>Most Listened Playlist</h3>
 
 				<p>
-					This playlist will be updated when a song ends. The name is editable on the <a href="/settings/">settings page</a>. Take into a count that after initialization of the playlist name you have to update the <i>playlists.json</i> too.
+					This playlist will be updated when a song ends. The name is editable on the <a href="/settings/">settings page</a>. Take into account that after initialization of the playlist name you have to update the <i>playlists.json</i> too.
 				</p>
 
 				<hr>
@@ -217,7 +217,7 @@
 				<h3>Song Info</h3>
 
 				<p>
-					When a song is played it first queries the <i>Last.fm service</i> for the artist. Then it queries the local server for the song tags. If found it replaces the artist info.<br>
+					When a song is played it first queries the <i>Last.fm service</i> for the artist. Then it queries the local server for the song tags. If found, it replaces the artist info.<br>
 					The web MediaSession API also gets initialized.
 				</p>
 
@@ -226,7 +226,7 @@
 				<h3>Buttons</h3>
 
 				<p>
-					The interface consists of various buttons. The purpose of every button is explained when hovered over.
+					The interface consists of various buttons. The purpose of every button is explained as a title that will appear when you hover over it.
 				</p>
 
 				<hr>
@@ -234,8 +234,8 @@
 				<h3>Mobile phone support</h3>
 
 				<p>
-					The interface is not (yet) designed for small screens. It however still can be used on mobile phones.<br>
-					As of now the web MediaSession API only works on mobile phones.<br>
+					The interface is not (yet) designed for small screens. However, it still can be used on mobile phones.<br>
+					As of right now the web MediaSession API only works on mobile phones.<br>
 					The web interface has a manifest for adding it to the home screen.
 				</p>
 
@@ -244,7 +244,7 @@
 				<h3>Old Browsers</h3>
 
 				<p>
-					When an old browser is detected it asks if you want to switch to a page with limited functionality, so that you can still use it on old browsers. Note: only the home page checks for old browsers.
+					When an old browser is detected the page asks if you want to switch to a page with limited functionality, so that you can still use it on old browsers. Note: only the home page checks for old browsers.
 				</p>
 			</div>
 		</div>
@@ -271,10 +271,10 @@
 
 			<div maxHeight="160">
 				<p>
-					This feature is used for downloading youtube videos. Simply paste the youtube url into the input box and hit <i>Search</i>, the page and the server will handle the rest.
+					This feature is used for downloading youtube videos. Simply paste the youtube url into the input box, select the type and hit <i>Search</i>, the page and the server will handle the rest.
 					You can monitor the progress in the servers terminal window.<br>
-					The tag functionality is broken...<br>
-					You can (for now) only use this to download audio.
+					The tag functionality can act a big wonky sometimes and I don't know how to fix it.<br>
+					You can use this to download audio and video. It'll automaticly add it to the right folder.
 				</p>
 			</div>
 		</div>
@@ -285,7 +285,7 @@
 				<button><img src="/Assets/ic_keyboard_arrow_up_white.svg"></button>
 			</div>
 
-			<div maxHeight="870">
+			<div maxHeight="3500">
 				<p>
 					There is a <a href="/settings/">settings page</a> where you can edit basic settings. You will have to restart the server after you save!
 				</p>
@@ -318,6 +318,13 @@
 					It returns the audio tags. Requires a song name after the last slash.
 				</p>
 
+				<h4 style="font-size: 0.8em;"><a href="/getLyrics/">Lyrics</a></h4>
+
+				<p>
+					Fetches lyrics from <a href="https://makeitpersonal.co"><i>makeitpersonal.co</i></a>.<br>
+					A valid request looks like this: <a href="/getLyrics/Michael Jackson/Thriller">/getLyrics/Michael Jackson/Thriller</a>
+				</p>
+
 				<h4 style="font-size: 0.8em;"><a href="/updatePlaylist">Update Playlist</a></h4>
 
 				<p>
@@ -348,6 +355,34 @@
 
 				<p>
 					A post request that accepts a JSON string as the new settings file.
+				</p>
+
+				<h4 style="font-size: 0.8em;"><a href="/checkForUpdates/">Check For Updates</a></h4>
+
+				<p>
+					Checks the local version value in <i>package.json</i> against the latest Github release.<br>
+					It returns a JSON object
+				</p>
+
+				<h4 style="font-size: 0.8em;">Youtube Download</h4>
+				<h5 style="font-size: 0.7em;"><a href="/ytdl/">(GET) YTDL</a></h5>
+				<p>
+					Returns the info from the YouTube video.
+					Requires the video id after the the last slash.
+				</p>
+				<h5 style="font-size: 0.7em;"><a href="/ytdl/">(POST) YTDL</a></h5>
+				<p>
+					Downloads the youtube video.
+					<b style="font-size: 0.7em">Body</b><br>
+					<code>{url: **YouTube URL**, type: **Audio/Video**, fileName: **The name you want to give the song**}</code>
+				</p>
+
+				<h4 style="font-size: 0.8em;"><a href="/tags/">Tags</a></h4>
+
+				<p>
+					Adds tags to audio file.
+					<b style="font-size: 0.7em">Body</b><br>
+					<code>{tags: **JSON object of <a href="https://www.npmjs.com/package/node-id3#supported-tag-keys">accepted</a> tags**, songName: **Name of the song**}</code>
 				</p>
 			</div>
 		</div>
